# lcscan

./: .gitattributes  Makefile  Makefile.global.in  README.md  configure  configure.in
desktop/: Makefile  lcscan.desktop  lcscan.xpm
documents/: AUTHORS  INSTALL  Makefile  README  VERSION
documents/hardware/: Makefile  component_side.ps  hardware.txt  lcscan.brd  lcscan.cmp  lcscan.net  lcscan.pro  lcscan.sch  lcscan.stf  schematic.ps  silk_screen.ps  solder_side.ps
documents/hu/: INSTALL  Makefile  README
languages/: Makefile  lcscan.po  lcscan_hu.mo  lcscan_hu.po
manual/: Makefile  lcscan-backend_en.7  lcscan-backend_hu.7  lcscan_en.7  lcscan_hu.7
source/: Makefile  config.inc.in  frmaddress.lfm  frmaddress.lrs  frmaddress.pp  frmmain.lfm  frmmain.lrs  frmmain.pp  lcscan.compiled  lcscan.lpi  lcscan.lpr  lcscan.lrs  unttranslator.pp
source/backend/: Makefile  lcscan-backend.lpi  lcscan-backend.lpr
